--- a/RWBTaskWeb/src/styles.css
+++ b/RWBTaskWeb/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+.red {
+    background-color: red;
+}
+.green {
+    background-color:green;
+}
