small code update

--- a/RWBTaskWeb/src/styles.css
+++ b/RWBTaskWeb/src/styles.css
@@ -4,9 +4,11 @@
     background-color: red;
     color: white;
     padding: 1px;
+    margin-right: 2px;
 }
 .green {
     background-color:green;
     color: white;
     padding: 1px;
+    margin-right: 2px;
 }
