critical code complete

--- a/RWBTaskWeb/src/app/event-list/event-list.component.html
+++ b/RWBTaskWeb/src/app/event-list/event-list.component.html
@@ -29,7 +29,7 @@
                                 <td>{{em.isLive}}</td>
                                 <td>{{em.lineName}}</td>
                                 <td id="mid_{{em.id}}_{{em.lineId}}">
-                                    <price-indicator></price-indicator>{{em.price}}
+                                    {{em.price}}
                                 </td>
                             </tr>
                         </tbody>
@@ -42,3 +42,4 @@
         </tr>
     </tbody>
 </table>
+<task></task>
