complete task implementation

--- a/RWBTaskWeb/src/app/app.component.html
+++ b/RWBTaskWeb/src/app/app.component.html
@@ -6,7 +6,7 @@
         <div class="panel-body">
             <rwb-event-list></rwb-event-list>
 
-            <div>
+            <div class="hidden">
                 <span>Connection state: {{connectionState$ | async}}</span>
             </div>
     
