--- a/RWBTaskWeb/src/app/event-list/event-list.component.html
+++ b/RWBTaskWeb/src/app/event-list/event-list.component.html
@@ -28,8 +28,8 @@
                                 <td>{{em.Name}}</td>
                                 <td>{{em.IsLive}}</td>
                                 <td>{{em.LineName}}</td>
-                                <td id="mid_{{em.id}}_{{em.lineId}}">
-                                    {{em.Price}}
+                                <td id="line_{{em.LineId}}" title="Line ID: {{em.LineId}}">
+                                    <span>{{em.Price}}</span>
                                 </td>
                             </tr>
                         </tbody>
@@ -42,4 +42,3 @@
         </tr>
     </tbody>
 </table>
-<task></task>
